--- a/slider-service/slider/package.json
+++ b/slider-service/slider/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "react-dev": "webpack -d --watch",
         "server-dev": "nodemon server/index.js",
-        "lint": "eslint src"
+        "start": "node server/index.js",
+        "lint": "eslint src",
+        "heroku-postbuild": "webpack -p"
     },
     "author": "Beth Johnson",
     "license": "ISC",
