--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Fatoom M Fayad",
   "license": "ISC",
   "dependencies": {
+    "@primer/components": "^15.0.1",
     "body-parser": "^1.19.0",
     "eslint": "^6.6.0",
     "express": "^4.17.1",
