--- a/basic-info-service/proxy-server/package.json
+++ b/basic-info-service/proxy-server/package.json
@@ -12,16 +12,19 @@
   "author": "Fatoom M Fayad",
   "license": "ISC",
   "dependencies": {
+    "@primer/components": "^15.0.1",
     "body-parser": "^1.19.0",
     "eslint": "^6.6.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "jquery": "^3.4.1",
     "mongoose": "^5.7.8",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router": "^5.1.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
