--- a/poll-service/client/package.json
+++ b/poll-service/client/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/components": "^15.0.1",
+    "@primer/octicons-react": "^9.2.0",
+    "@primer/primitives": "^2.0.0",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-rating": "^2.0.1",
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
