--- a/poll-service/package.json
+++ b/poll-service/package.json
@@ -15,10 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@primer/components": "^15.0.1",
+    "@primer/octicons-react": "^9.2.0",
+    "@primer/primitives": "^2.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.9",
-    "request": "^2.88.0"
+    "react-center": "^1.1.1",
+    "react-star-ratings": "^2.3.0",
+    "request": "^2.88.0",
+    "styled-components": "^4.4.1",
+    "styled-system": "^5.1.2"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
