--- a/proxy-server/package.json
+++ b/proxy-server/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "babel-core": "^6.23.1",
         "babel-loader": "^6.3.2",
+        "babel-plugin-styled-components": "^1.10.6",
         "babel-preset-es2015": "^6.22.0",
         "babel-preset-react": "^6.23.0",
         "webpack": "^2.2.1"
@@ -27,6 +28,7 @@
         "mysql": "^2.13.0",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
-        "request": "^2.88.0"
+        "request": "^2.88.0",
+        "styled-components": "^4.4.1"
     }
 }
