--- a/basic-info-service/proxy-server/package.json
+++ b/basic-info-service/proxy-server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@primer/components": "^15.0.1",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "eslint": "^6.6.0",
     "express": "^4.17.1",
@@ -29,12 +30,15 @@
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
