--- a/basic-info-service/proxy-server/package.json
+++ b/basic-info-service/proxy-server/package.json
@@ -15,7 +15,6 @@
     "@primer/components": "^15.0.1",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
-    "eslint": "^6.6.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
     "jquery": "^3.4.1",
@@ -38,6 +37,9 @@
     "babel-preset-react": "^6.23.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
