--- a/poll-service/package.json
+++ b/poll-service/package.json
@@ -19,10 +19,13 @@
     "@primer/octicons-react": "^9.2.0",
     "@primer/primitives": "^2.0.0",
     "body-parser": "^1.19.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.9",
     "react-center": "^1.1.1",
     "react-star-ratings": "^2.3.0",
+    "react-test-renderer": "^16.11.0",
     "request": "^2.88.0",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.2"
