--- a/description-service/package.json
+++ b/description-service/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec node index.js ",
-    "compile": "npx babel src --out-dir public --copy-files --watch"
+    "compile": "npx babel src --out-dir public --copy-files --watch",
+    "react-dev": "webpack -d --watch "
   },
   "keywords": [],
   "author": "",
@@ -31,8 +32,18 @@
   "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
-    "mongoose": "^5.7.9"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.2.0",
+    "mongoose": "^5.7.9",
+    "react-hot-loader": "^4.5.3",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "@hot-loader/react-dom": "^16.8.6",
+    "webpack-cli": "^3.3.10"
   },
   "description": ""
 }
