--- a/package.json
+++ b/package.json
@@ -1,37 +1,62 @@
 {
-  "name": "proxy-server",
+  "name": "new",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.x"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
-    "start": "node server/index.js",
-    "server-dev": "nodemon server/index.js",
-    "react-dev": "webpack -d --watch",
-    "heroku-postbulid" : "webpack -p"
+    "test": "jest",
+    "start": "nodemon --exec node index.js ",
+    "compile": "npx babel src --out-dir public --copy-files --watch",
+    "react-dev": "webpack -d --watch "
   },
-  "author": "Fatoom M Fayad",
+  "keywords": [],
+  "author": "nuhla",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "@primer/components": "^15.0.1",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
-    "eslint": "^6.6.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-router": "0.0.1",
-    "mongoose": "^5.7.8",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
-    "react-router": "^5.1.2",
-    "request": "^2.88.0"
+    "react-star-ratings": "^2.3.0",
+    "request": "^2.88.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.11.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@hot-loader/react-dom": "^16.8.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
-  }
+    "jest": "^24.9.0",
+    "mongoose": "^5.7.9",
+    "react-hot-loader": "^4.5.3",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  },
+  "repository": {
+    "type": "git",
+    "url": " https://git.heroku.com/protected-ridge-42092.git"
+  },
+  "description": ""
 }
