fixing The docs of poll service

--- a/poll-service/client/public/manifest.json
+++ b/poll-service/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Poll Service",
+  "name": "Google Play Product Poll Service Replica",
   "icons": [
     {
       "src": "favicon.ico",
